# web-ytchat

./: README.md  main.py  pyproject.toml  requirements.txt
static/css/: styles.css
static/js/: app.js
templates/: index.html
