[tool.poetry]
name = "nailiu-chat"
version = "0.1.0"
description = ""
authors = ["BuildTools <unconfigured@null.spigotmc.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anyio = "4.2.0"
apscheduler = "3.10.4"
blinker = "1.7.0"
certifi = "2023.11.17"
cffi = "1.16.0"
chardet = "3.0.4"
charset-normalizer = "3.3.2"
click = "8.1.7"
cryptography = "41.0.7"
dill = "0.3.7"
exceptiongroup = "1.2.0"
flask = "3.0.0"
flask-apscheduler = "1.13.1"
googletrans = "4.0.0rc1"
h11 = "0.9.0"
h2 = "3.2.0"
hpack = "3.0.0"
hstspreload = "2024.1.5"
httpcore = "0.9.1"
httpx = "0.13.3"
hyperframe = "5.2.0"
idna = "2.10"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
lxml = "5.1.0"
markupsafe = "2.1.3"
multiprocess = "0.70.15"
pathos = "0.3.1"
pox = "0.3.3"
ppft = "1.7.6.7"
pycparser = "2.21"
pyexecjs = "1.5.1"
pytchat = "0.5.5"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
requests = "2.31.0"
rfc3986 = "1.5.0"
six = "1.16.0"
sniffio = "1.3.0"
tqdm = "4.66.1"
translators = "5.8.9"
typing-extensions = "4.9.0"
tzlocal = "5.2"
urllib3 = "2.1.0"
werkzeug = "3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
